applications/argocd/templates/healthcheck-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-healthcheck-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: k8s.terence.cloud
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.k8s.terence.cloud
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  name: https
            path: /healthz
            pathType: ImplementationSpecific
