applications/argocd/templates/webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-webhook-ingress
  annotations:
    
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.terence.cloud
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  name: https
            path: /api/webhook
            pathType: ImplementationSpecific
